--- a/index.html
+++ b/index.html
@@ -84,26 +84,46 @@
         </div>
         <div class="mentors-container">
             <div>
-                <div class="profile-img"><img src="./assets/ReadyPlayerMe-Avatar (1).jpeg" alt="Kelvin King"></div>
+                <div class="profile-img"><img src="./assets/Kelvin king.jpg" alt="Kelvin King"></div>
                 <div class="profile-content">
                     <h4>Kelvin King</h4>
-                    <p>Kelvin King is a seasoned trader with over xx years of trading experience. His trading style is a
-                        simplified approach to structure, liquidity and key levels. He trades forex, crypto and metals.
+                    <p>Kelvin King is a seasoned trader with over four years of trading experience. His trading style is
+                        a simplified approach to structure, liquidity and key levels. He trades forex, crypto and metals.
                         He has helped well over 1,000 traders to attain market proficiency.</p>
-                    <div class="x-logo">
-                        <a href="#"><img src="./assets/x-logo/logo-black.png" alt="x-logo"></a>
+
+                    <div class="x-logo-container">
+                        <div class="x-logo">
+                            <a href="https://x.com/Kelvinking_"><img src="./assets/x-logo/logo-black.png"
+                                    alt="x-logo"></a>
+                        </div>
+                        <div class="x-logo">
+                            <a href="https://instagram.com/kelvin_kivg"><img
+                                    src="./assets/IG-Logo-Silhouette-Free-PNG-Image.png" alt="IG-logo"></a>
+                        </div>
+                        <div class="x-logo">
+                            <a href="mailto:kingkelvin8@gmail.com"><img
+                                    src="./assets/toppng.com-gmail-black-outline-symbol-1600x1600.png" alt="email"></a>
+                        </div>
                     </div>
                 </div>
             </div>
             <div>
-                <div class="profile-img"><img src="./assets/ReadyPlayerMe-Avatar (1).jpeg" alt="FzNation"></div>
+                <div class="profile-img"><img src="./assets/fz.jpg" alt="FzNation"></div>
                 <div class="profile-content">
                     <h4>FzNation</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti totam, eos nisi enim ad
-                        nesciunt molestiae corporis libero quo inventore. Impedit rem quisquam dolor quidem, animi error
-                        autem quia tempore!</p>
-                    <div class="x-logo">
-                        <a href="#"><img src="./assets/x-logo/logo-black.png" alt="x-logo"></a>
+                    <p>Fz is a skilled and consistently profitable trader known for deep market knowledge, honesty, and
+                        a faith-driven approach. Guided by integrity, discipline, and a love for God, Fz combines
+                        expertise with purpose, earning lasting trust in the trading community.</p>
+
+                    <div class="x-logo-container">
+                        <div class="x-logo">
+                            <a href="https://x.com/fznation01"><img src="./assets/x-logo/logo-black.png"
+                                    alt="x-logo"></a>
+                        </div>
+                        <div class="x-logo">
+                            <a href="https://t.me/fznation01"><img src="./assets/icons8-telegram-app-50.png"
+                                    alt="x-logo"></a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -114,8 +134,10 @@
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, corrupti numquam totam ducimus
                         a tenetur ullam excepturi, placeat aliquam eligendi maxime porro omnis ex corporis esse
                         dignissimos vitae, incidunt exercitationem!</p>
-                    <div class="x-logo">
-                        <a href="#"><img src="./assets/x-logo/logo-black.png" alt="x-logo"></a>
+                    <div class="x-logo-container">
+                        <div class="x-logo">
+                            <a href="#"><img src="./assets/x-logo/logo-black.png" alt="x-logo"></a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -130,7 +152,7 @@
         <div class="form">
             <iframe
                 src="https://docs.google.com/forms/d/e/1FAIpQLSf1MCZPjpzvcs6TjrLUrBqecOUfxDznAdjfDSGw4ZcQzcsaSA/viewform?embedded=true"
-                width="auto" height="879">Loading…</iframe>
+                width="auto" height="920">Loading…</iframe>
         </div>
     </section>
 
