--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
                 <div class="profile-content">
                     <h4>Kelvin King</h4>
                     <p>Kelvin King is a seasoned trader with over four years of trading experience. His trading style is
-                        a simplified approach to structure, liquidity and key levels. He trades forex, crypto and metals.
+                        a simplified approach to structure, liquidity and key levels. He trades forex, crypto and
+                        metals.
                         He has helped well over 1,000 traders to attain market proficiency.</p>
 
                     <div class="x-logo-container">
@@ -128,15 +129,23 @@
                 </div>
             </div>
             <div>
-                <div class="profile-img"><img src="./assets/ReadyPlayerMe-Avatar (1).jpeg" alt="BBJedo"></div>
+                <div class="profile-img"><img src="./assets/BBJedo.jpg" alt="BBJedo"></div>
                 <div class="profile-content">
                     <h4>BBJedo</h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, corrupti numquam totam ducimus
-                        a tenetur ullam excepturi, placeat aliquam eligendi maxime porro omnis ex corporis esse
-                        dignissimos vitae, incidunt exercitationem!</p>
+                    <p>Bright Jedo is a Financial Technical Analyst, Blockchain KOL, and Business Developer at NoOnes
+                        app. He partners with Blueberry Funded and leads Ryfinancials, a growing Telegram community
+                        focused on fintech, funding, and education.</p>
                     <div class="x-logo-container">
                         <div class="x-logo">
-                            <a href="#"><img src="./assets/x-logo/logo-black.png" alt="x-logo"></a>
+                            <a href="https://x.com/BBjedo"><img src="./assets/x-logo/logo-black.png" alt="x-logo"></a>
+                        </div>
+                        <div class="x-logo">
+                            <a href="https://t.me/IBBjedo"><img src="./assets/icons8-telegram-app-50.png"
+                                    alt="x-logo"></a>
+                        </div>
+                        <div class="x-logo">
+                            <a href="https://www.linkedin.com/in/bright-jedo-80b271319"><img src="./assets/linkedin.png"
+                                    alt="x-logo"></a>
                         </div>
                     </div>
                 </div>
