Updated to include payment details

--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About the program</a></li>
                 <li><a href="#mentors">Mentors</a></li>
-                <li><a href="#waitlist">Waitlist</a></li>
+                <li><a href="#waitlist" class="action-btn program-btn">Program</a></li>
             </ul>
         </div>
     </nav>
+
+    <p class="hidden confirm" id="confirm">Copied!</p>
 
     <section id="home">
         <div class='hero-container'>
@@ -38,7 +40,7 @@
             <p class="tagline">Pathway to Profitability and Successful Trading Career</p>
 
             <div class="action-btn">
-                <p><a href="#waitlist">Join the Waitlist</a></p>
+                <p><a href="#waitlist">Join the Program</a></p>
             </div>
         </div>
 
@@ -66,14 +68,14 @@
                 </div>
                 <div class="detail-container">
                     <p>Payment Opens:</p>
-                    <p class="detail">June 14</p>
+                    <p class="detail">ongoing</p>
                 </div>
                 <div class="detail-container">
                     <p>Program Begins:</p>
                     <p class="detail">July 12</p>
                 </div>
             </div>
-            <p class="action-btn about-btn"><a href="#waitlist">Join the Waitlist</a></p>
+            <p class="action-btn about-btn"><a href="#waitlist">Join the Program</a></p>
         </div>
     </section>
 
@@ -156,13 +158,41 @@
     <section id='waitlist'>
         <div class="waitlist-heading">
             <p>Join the</p>
-            <h3>Waitlist</h3>
+            <h3>Program</h3>
         </div>
-        <div class="form">
+        <div class="program-container">
+            <div>
+                <p class="numbering">1</p>
+                <h3 class="step-heading">Pay program Fee</h3>
+                <div class="step-details">
+                    <p>Amount: 150 USDT</p>
+                    <p>Wallet Address: </p>
+                    <p class="w-address" id="w-address">THZ4ewat64xoBiZLiPE5G9C4AoDQopBRXM<i
+                            class="fa-solid fa-clone"></i></p>
+                    <p>Network: TRC20</p>
+                </div>
+            </div>
+            <div>
+                <p class="numbering">2</p>
+                <h3 class="step-heading">Confirm Payment</h3>
+                <p class="step-details">Send evidence of payment to <a href="t.me/kelvin_bill"
+                        class="tg-send">t.me/kelvin_bill</a></p>
+
+            </div>
+            <div>
+                <p class="numbering">3</p>
+                <h3 class="step-heading">Welcome to the program</h3>
+                <p class="step-details">Once verification is complete, you are in 🎉🎉</p>
+            </div>
+        </div>
+
+        <p class="warning">Note: <span>Please send only USDT to the wallet address above</span></p>
+
+        <!-- <div class="form">
             <iframe
                 src="https://docs.google.com/forms/d/e/1FAIpQLSf1MCZPjpzvcs6TjrLUrBqecOUfxDznAdjfDSGw4ZcQzcsaSA/viewform?embedded=true"
                 width="auto" height="920">Loading…</iframe>
-        </div>
+        </div> -->
     </section>
 
     <footer>
