--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
+    <link rel="shortcut icon" href="./assets/25.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/7aa294179d.js" crossorigin="anonymous"></script>
     <script defer src="index.js"></script>
     <title>Unveil 2025</title>
