--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
             <p class="about-main"><b>Unveil 2025</b> is a 3-month mentorship program designed to help you level up your
                 trading journey. The program
-                takes you from a <span class="emphasis">beginner level trader to advanced level</span> with a
+                takes you from a <span class="emphasis">beginner level trader to advanced level</span> with
                 step-by-step
                 guidance. You can expect Zoom
                 sessions, one-on-one mentorship, a community of fellow mentees to learn and grow together and at the end
