--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About the program</a></li>
                 <li><a href="#mentors">Mentors</a></li>
-                <li><a href="#waitlist" class="action-btn program-btn">Program</a></li>
+                <li><a href="#waitlist" class="program-btn">Program</a></li>
             </ul>
         </div>
     </nav>
