--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <div>
                 <p class="numbering">2</p>
                 <h3 class="step-heading">Confirm Payment</h3>
-                <p class="step-details">Send evidence of payment to <a href="t.me/kelvin_bill"
+                <p class="step-details">Send evidence of payment to <a href="t.me/kelvin_bill" target="_blank"
                         class="tg-send">t.me/kelvin_bill</a></p>
 
             </div>
